cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/loc_init_not_static_eval.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/loc_init_not_static_eval.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  --------------------------------------------------------------------------------------------------------------------------------------------
  (1/2) Failed to determine whether a location is an initial location, as one of its initialization predicates cannot be statically evaluated.
  --------------------------------------------------------------------------------------------------------------------------------------------
   * In location "a.a":
     - initial i;
               ^

  -----------------------------------------------------------------------------------
  (2/2) Location has an initialization predicate that cannot be evaluated statically.
  -----------------------------------------------------------------------------------
   * In location "a.a":
     - initial i;
               ^
